fix(serve): for ionic1 plugin, include lab dir
fixes https://github.com/driftyco/ionic-cli/issues/2222

--- a/packages/cli-plugin-ionic1/package.json
+++ b/packages/cli-plugin-ionic1/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "files": [
+    "lab/",
     "dist/"
   ],
   "license": "MIT",
