--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -8,16 +8,16 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
+    "lint": "tslint -c ../../tslint.json \"src/**/*.ts\"",
     "build": "npm run clean && npm run build-ts && npm run build-js",
-    "build-ts": "../../node_modules/.bin/tsc",
-    "build-js": "npm run -s script-prepublish && cp ./resources.json ./dist/resources.json",
-    "watch": "npm run clean && ../../node_modules/.bin/concurrently -p '{name} ' -n 'TS,JS' -c 'cyan.bold,yellow.dim' 'npm run watch-ts' 'npm run watch-js'",
-    "watch-ts": "../../node_modules/.bin/tsc -w",
-    "watch-js": "../../node_modules/.bin/cross-env IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local 'npm run watch-js-chokidar'",
-    "watch-js-chokidar": "../../node_modules/.bin/chokidar --silent 'dist/**/*.js' -c 'npm run build-js'",
-    "script-prepublish": "node ../../scripts/prepublish.js cli-plugin-cordova",
-    "test": "../../node_modules/.bin/jest",
+    "build-ts": "tsc",
+    "build-js": "npm run -s script-prepublish",
+    "watch": "npm run clean && concurrently -p \"{name} \" -n \"TS,JS\" -c \"cyan.bold,yellow.dim\" \"npm run watch-ts\" \"npm run watch-js\"",
+    "watch-ts": "tsc -w",
+    "watch-js": "cross-env IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local npm run watch-js-chokidar",
+    "watch-js-chokidar": "chokidar --silent \"dist/**/*.js\" -c \"npm run build-js\"",
+    "script-prepublish": "node ../../scripts/prepublish.js cli-utils",
+    "test": "jest",
     "prepublish": "npm run build",
     "postinstall": "node ./bin/postinstall"
   },
@@ -69,6 +69,14 @@
     "@types/chalk": "^0.4.31",
     "@types/xml2js": "0.0.33",
     "chalk": "^1.1.3",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.17",
+    "chokidar-cli": "^1.2.0",
+    "concurrently": "^3.4.0",
+    "cross-env": "^4.0.0",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2",
+    "tslint": "^4.0.0-dev.0",
+    "tslint-ionic-rules": "^0.0.8",
+    "typescript": "^2.3.1"
   }
 }
