--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -15,16 +15,16 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
+    "lint": "tslint -c ../../tslint.json \"src/**/*.ts\"",
     "build": "npm run clean && npm run build-ts && npm run build-js",
-    "build-ts": "../../node_modules/.bin/tsc",
+    "build-ts": "tsc",
     "build-js": "npm run -s script-prepublish",
-    "watch": "npm run clean && ../../node_modules/.bin/concurrently -p '{name} ' -n 'TS,JS' -c 'cyan.bold,yellow.dim' 'npm run watch-ts' 'npm run watch-js'",
-    "watch-ts": "../../node_modules/.bin/tsc -w",
-    "watch-js": "../../node_modules/.bin/cross-env IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local 'npm run watch-js-chokidar'",
-    "watch-js-chokidar": "../../node_modules/.bin/chokidar --silent 'dist/**/*.js' -c 'npm run build-js'",
-    "script-prepublish": "node ../../scripts/prepublish.js ionic",
-    "test": "../../node_modules/.bin/jest",
+    "watch": "npm run clean && concurrently -p \"{name} \" -n \"TS,JS\" -c \"cyan.bold,yellow.dim\" \"npm run watch-ts\" \"npm run watch-js\"",
+    "watch-ts": "tsc -w",
+    "watch-js": "cross-env IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local npm run watch-js-chokidar",
+    "watch-js-chokidar": "chokidar --silent \"dist/**/*.js\" -c \"npm run build-js\"",
+    "script-prepublish": "node ../../scripts/prepublish.js cli-utils",
+    "test": "jest",
     "prepublish": "npm run build"
   },
   "files": [
@@ -63,7 +63,15 @@
     "@types/minimist": "^1.2.0",
     "@types/opn": "^3.0.28",
     "@types/path-exists": "^1.0.29",
-    "@types/tar": "^1.0.29"
+    "@types/tar": "^1.0.29",
+    "chokidar-cli": "^1.2.0",
+    "concurrently": "^3.4.0",
+    "cross-env": "^4.0.0",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2",
+    "tslint": "^4.0.0-dev.0",
+    "tslint-ionic-rules": "^0.0.8",
+    "typescript": "^2.3.1"
   },
   "peerDependencies": {},
   "jest": {
