--- a/packages/cli-utils/tsconfig.json
+++ b/packages/cli-utils/tsconfig.json
@@ -25,6 +25,7 @@
     "../../types/string-width.d.ts",
     "../../types/superagent.d.ts",
     "../../types/strip-ansi.d.ts",
+    "../../types/strip-ansi.d.ts",
     "../../types/leek.d.ts",
     "../../types/os-name.d.ts",
     "src/**/*.ts"
