--- a/packages/cli-plugin-cordova/tsconfig.json
+++ b/packages/cli-plugin-cordova/tsconfig.json
@@ -20,6 +20,7 @@
     "../../types/cross-spawn.d.ts",
     "../../types/string-width.d.ts",
     "../../types/slice-ansi.d.ts",
+    "../../types/strip-ansi.d.ts",
     "../../types/superagent.d.ts",
     "../../types/leek.d.ts",
     "../../types/os-name.d.ts",
