--- a/packages/ionic/tsconfig.json
+++ b/packages/ionic/tsconfig.json
@@ -18,6 +18,7 @@
     "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/slice-ansi.d.ts",
+    "../../types/strip-ansi.d.ts",
     "../../types/string-width.d.ts",
     "../../types/superagent.d.ts",
     "../../types/leek.d.ts",
