--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "bootstrap": "npm run build && npm run cli-utils:setup && npm run cli-plugin-ionic-angular:setup && lerna bootstrap",
+    "bootstrap": "npm run cli-utils:setup && npm run cli-plugin-ionic-angular:setup && lerna bootstrap && npm run build",
     "cli-utils:setup": "cd packages/cli-utils && npm install && npm run build",
     "cli-plugin-ionic-angular:setup": "cd packages/cli-plugin-ionic-angular && npm install @ionic/app-scripts",
     "lint": "tslint -c tslint.json 'packages/*/src/**/*.ts' 'scripts/**/*.ts'",
