chore(): commit js scripts for now...

--- a/circle.yml
+++ b/circle.yml
@@ -6,12 +6,7 @@ machine:
 
 dependencies:
   cache_directories:
-    - packages/cli-plugin-cordova/node_modules
-    - packages/cli-plugin-ionic-angular/node_modules
-    - packages/cli-plugin-ionic1/node_modules
-    - packages/cli-plugin-proxy/node_modules
-    - packages/cli-utils/node_modules
-    - packages/ionic/node_modules
+    - packages/*/node_modules
   post:
     - npm run bootstrap
 
