--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
   "scripts": {
-    "bootstrap": "npm run cli-utils:setup && npm run cli-plugin-ionic-angular:setup && lerna bootstrap && lerna run build-ts && npm run build",
+    "bootstrap": "npm run cli-utils:setup && npm run cli-plugin-ionic-angular:setup && lerna bootstrap",
     "cli-utils:setup": "cd packages/cli-utils && npm install && npm run build-ts",
     "cli-plugin-ionic-angular:setup": "cd packages/cli-plugin-ionic-angular && npm install @ionic/app-scripts",
     "lint": "tslint -c tslint.json 'packages/*/src/**/*.ts' 'scripts/**/*.ts'",
     "build": "tsc",
     "watch": "tsc -w",
     "docs": "node ./scripts/createMarkdownDocs.js",
-    "publish:canary": "lerna run build && lerna run script-prepublish && lerna publish --canary --exact --npm-tag canary",
-    "publish:beta": "lerna run build && lerna run script-prepublish && lerna publish --exact --npm-tag beta",
-    "publish:rc": "lerna run build && lerna run script-prepublish && lerna publish --exact --npm-tag beta",
+    "publish:canary": "lerna publish --canary --exact --npm-tag canary",
+    "publish:beta": "lerna publish --exact --npm-tag beta",
+    "publish:rc": "lerna publish --exact --npm-tag beta",
     "publish:ci": "npm run publish:canary -- --yes",
     "prepush": "npm run lint"
   },
