--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/cli-plugin-ionic-angular",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.0",
   "description": "Ionic CLI build plugin for Ionic Angular projects",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
@@ -43,7 +43,7 @@
     "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js"
   },
   "dependencies": {
-    "@ionic/cli-utils": "1.0.0-rc.2",
+    "@ionic/cli-utils": "1.0.0",
     "chalk": "^1.1.3"
   },
   "devDependencies": {
