--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
-  "lerna": "2.0.0-beta.38",
+  "lerna": "2.0.0-rc.4",
   "version": "independent",
   "packages": [
+    "scripts",
     "packages/*"
   ],
   "changelog": {
@@ -11,5 +12,6 @@
       "feat": "New Feature"
     },
     "cacheDir": ".changelog"
-  }
+  },
+  "conventionalCommits": true
 }
