--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
   "private": true,
   "scripts": {
-    "bootstrap": "npm run cli-utils:setup && npm run cli-plugin-ionic-angular:setup && lerna bootstrap",
-    "cli-utils:setup": "cd packages/cli-utils && npm install && npm run build-ts",
-    "cli-plugin-ionic-angular:setup": "cd packages/cli-plugin-ionic-angular && npm install @ionic/app-scripts",
+    "bootstrap": "lerna bootstrap && npm run build && npm run link",
+    "link": "lerna exec --scope \"@ionic/cli-*\" -- npm link",
     "lint": "tslint -c tslint.json 'packages/*/src/**/*.ts' 'scripts/**/*.ts'",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "docs": "npm run build && node ./scripts/createMarkdownDocs.js",
-    "watch:docs": "npm-watch docs",
+    "test": "lerna run test",
+    "build": "lerna run build",
+    "watch": "lerna run watch --stream --no-sort --concurrency 8",
+    "docs": "node ./scripts/docs.js",
     "publish:canary": "lerna publish --canary --exact --npm-tag canary",
     "publish:beta": "lerna publish --exact --npm-tag beta",
-    "publish:rc": "lerna publish --exact --npm-tag beta",
     "publish:ci": "npm run publish:canary -- --yes",
     "publish": "lerna publish --exact",
     "prepush": "npm run lint"
-  },
-  "watch": {
-    "docs": {
-      "patterns": [ "packages", "scripts" ],
-      "extensions": "ts",
-      "quiet": false
-    }
   },
   "devDependencies": {
     "@types/node": "^6.0.68",
@@ -32,13 +23,13 @@
     "cross-env": "^4.0.0",
     "eslint-config-ionic": "0.0.2",
     "husky": "^0.13.3",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.2",
-    "lerna": "2.0.0-beta.38",
-    "npm-watch": "^0.1.9",
+    "in-publish": "^2.0.0",
+    "jest": "^20.0.0",
+    "jest-cli": "^20.0.0",
+    "lerna": "^2.0.0-rc.4",
     "replace": "^0.3.0",
-    "ts-jest": "^19.0.7",
-    "tslint": "^4.0.0-dev.0",
+    "ts-jest": "^20.0.2",
+    "tslint": "^5.2.0",
     "tslint-ionic-rules": "^0.0.8",
     "typescript": "^2.3.1"
   }
