--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -8,17 +8,17 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
+    "lint": "tslint -c ../../tslint.json \"src/**/*.ts\"",
     "build": "npm run clean && npm run build-ts && npm run build-js",
-    "build-ts": "../../node_modules/.bin/tsc",
-    "build-js": "npm run -s script-prepublish",
-    "watch": "npm run clean && ../../node_modules/.bin/concurrently -p '{name} ' -n 'TS,JS' -c 'cyan.bold,yellow.dim' 'npm run watch-ts' 'npm run watch-js'",
-    "watch-ts": "../../node_modules/.bin/tsc -w",
-    "watch-js": "../../node_modules/.bin/cross-env IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local 'npm run watch-js-chokidar'",
-    "watch-js-chokidar": "../../node_modules/.bin/chokidar --silent 'dist/**/*.js' -c 'npm run build-js'",
-    "script-prepublish": "node ../../scripts/prepublish.js cli-utils",
-    "test": "../../node_modules/.bin/jest",
-    "prepublish": "npm run build"
+    "build-ts": "tsc",
+    "build-js": "npm run script-prepublish",
+    "watch": "concurrently -p \"{name} \" -n \"TS,JS\" -c \"cyan.bold,yellow.dim\" \"npm run watch-ts\" \"npm run watch-js\"",
+    "watch-ts": "tsc -w",
+    "watch-js": "cross-env IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local \"npm run watch-js-chokidar\"",
+    "watch-js-chokidar": "chokidar --silent \"dist/**/*.js\" -c \"npm run build-js\"",
+    "script-prepublish": "cli-scripts-prepublish cli-utils",
+    "test": "jest",
+    "prepublish": "in-publish && npm run build || not-in-publish"
   },
   "keywords": [
     "ionic",
@@ -71,7 +71,8 @@
     "@types/progress": "^1.1.28",
     "@types/rimraf": "0.0.28",
     "@types/semver": "^5.3.31",
-    "@types/uuid": "^2.0.29"
+    "@types/uuid": "^2.0.29",
+    "@ionic/cli-scripts": "*"
   },
   "peerDependencies": {
     "strip-ansi": "^3.0.1"
