--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -75,7 +75,6 @@
     "transform": {
       ".(ts)": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "/__tests__/.*\\.(ts|js)$",
-    "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js"
+    "testRegex": "/__tests__/.*\\.(ts|js)$"
   }
 }
