--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -55,16 +55,14 @@
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "opn": "^4.0.2",
-    "path-exists": "^3.0.0",
     "tar": "^2.2.1"
   },
   "devDependencies": {
+    "@ionic/cli-scripts": "*",
     "@types/chalk": "^0.4.31",
     "@types/minimist": "^1.2.0",
     "@types/opn": "^3.0.28",
-    "@types/path-exists": "^1.0.29",
-    "@types/tar": "^1.0.29",
-    "@ionic/cli-scripts": "*"
+    "@types/tar": "^1.0.29"
   },
   "peerDependencies": {},
   "jest": {
