--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/cli-plugin-cordova",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Ionic Cordova Plugin for Ionic CLI",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
@@ -59,12 +59,12 @@
     "testRegex": "/__tests__/.*\\.(ts|js)$"
   },
   "dependencies": {
-    "@ionic/cli-utils": "1.0.0",
+    "@ionic/cli-utils": "1.1.0",
     "chalk": "^1.1.3",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
-    "@ionic/cli-scripts": "*",
+    "@ionic/cli-scripts": "0.1.0",
     "@types/chalk": "^0.4.31",
     "@types/xml2js": "0.0.33",
     "chalk": "^1.1.3",
