--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/cli-plugin-ionic-angular",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Ionic CLI build plugin for Ionic Angular projects",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
@@ -42,7 +42,7 @@
     "setupFiles": []
   },
   "dependencies": {
-    "@ionic/cli-utils": "1.0.0",
+    "@ionic/cli-utils": "1.1.0",
     "chalk": "^1.1.3"
   },
   "devDependencies": {
@@ -50,7 +50,7 @@
     "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@ionic/app-scripts": "^1.3.7",
-    "@ionic/cli-scripts": "*",
+    "@ionic/cli-scripts": "0.1.0",
     "@types/chalk": "^0.4.31",
     "@types/clean-css": "^3.4.30",
     "rxjs": "^5.2.0"
