--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -51,14 +51,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ionic/cli-utils": "1.0.0",
+    "@ionic/cli-utils": "1.1.0",
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "opn": "^4.0.2",
     "tar": "^2.2.1"
   },
   "devDependencies": {
-    "@ionic/cli-scripts": "*",
+    "@ionic/cli-scripts": "0.1.0",
     "@types/chalk": "^0.4.31",
     "@types/minimist": "^1.2.0",
     "@types/opn": "^3.0.28",
