--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -11,7 +11,7 @@
     "lint": "tslint -c ../../tslint.json \"src/**/*.ts\"",
     "build": "npm run clean && npm run build-ts && npm run build-js",
     "build-ts": "tsc",
-    "build-js": "npm run script-prepublish",
+    "build-js": "npm run script-prepublish && cp ./resources.json ./dist/resources.json",
     "watch": "concurrently -p \"{name} \" -n \"TS,JS\" -c \"cyan.bold,yellow.dim\" \"npm run watch-ts\" \"npm run watch-js\"",
     "watch-ts": "tsc -w",
     "watch-js": "cross-env IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local \"npm run watch-js-chokidar\"",
