refactor(cordova): use dargs to parse minimist args back

--- a/packages/cli-plugin-ionic1/tsconfig.json
+++ b/packages/cli-plugin-ionic1/tsconfig.json
@@ -17,6 +17,7 @@
   },
   "include": [
     "../../types/archiver.d.ts",
+    "../../types/dargs.d.ts",
     "../../types/proxy-middleware.d.ts",
     "../../types/glob-watcher.d.ts",
     "../../types/tiny-lr.d.ts",
