--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -49,6 +49,7 @@
     "archiver": "^1.3.0",
     "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
+    "dargs": "^5.1.0",
     "inquirer": "^3.0.6",
     "leek": "0.0.24",
     "minimist": "^1.2.0",
