--- a/packages/ionic/tsconfig.json
+++ b/packages/ionic/tsconfig.json
@@ -17,6 +17,7 @@
   "include": [
     "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
+    "../../types/dargs.d.ts",
     "../../types/slice-ansi.d.ts",
     "../../types/strip-ansi.d.ts",
     "../../types/string-width.d.ts",
