--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "tslint -c tslint.json 'packages/*/src/**/*.ts' 'scripts/**/*.ts'",
     "test": "lerna run test",
     "build": "lerna run build",
-    "watch": "lerna run watch --stream --no-sort --concurrency 8",
+    "watch": "lerna run watch --parallel",
     "docs": "node ./scripts/docs.js",
     "publish:canary": "lerna publish --canary --exact --npm-tag canary",
     "publish:beta": "lerna publish --exact --npm-tag beta",
@@ -26,7 +26,7 @@
     "in-publish": "^2.0.0",
     "jest": "^20.0.0",
     "jest-cli": "^20.0.0",
-    "lerna": "^2.0.0-rc.4",
+    "lerna": "^2.0.0-rc.5",
     "replace": "^0.3.0",
     "ts-jest": "^20.0.2",
     "tslint": "^5.2.0",
