--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -55,6 +55,7 @@
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "opn": "^4.0.2",
+    "semver": "^5.3.0",
     "tar": "^2.2.1"
   },
   "devDependencies": {
