--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -60,7 +60,8 @@
     "slice-ansi": "0.0.4",
     "string-width": "^2.0.0",
     "superagent": "^3.5.2",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "wrap-ansi": "^2.1.0"
   },
   "devDependencies": {
     "@ionic/cli-scripts": "0.1.1",
@@ -71,7 +72,8 @@
     "@types/ncp": "^2.0.0",
     "@types/rimraf": "0.0.28",
     "@types/semver": "^5.3.31",
-    "@types/uuid": "^2.0.29"
+    "@types/uuid": "^2.0.29",
+    "@types/wrap-ansi": "^2.0.14"
   },
   "peerDependencies": {
     "strip-ansi": "^3.0.1"
