chore: org rename driftyco -> ionic-team

--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -21,10 +21,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/driftyco/ionic-cli.git"
+    "url": "https://github.com/ionic-team/ionic-cli.git"
   },
   "bugs": {
-    "url": "https://github.com/driftyco/ionic-cli/issues"
+    "url": "https://github.com/ionic-team/ionic-cli/issues"
   },
   "files": [
     "dist/"
