--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
     "packages/*"
   ],
   "changelog": {
-    "repo": "driftyco/ionic-cli",
+    "repo": "ionic-team/ionic-cli",
     "labels": {
       "fix": "Bug fix",
       "feat": "New Feature"
