--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -44,10 +44,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/driftyco/ionic-cli.git"
+    "url": "https://github.com/ionic-team/ionic-cli.git"
   },
   "bugs": {
-    "url": "https://github.com/driftyco/ionic-cli/issues"
+    "url": "https://github.com/ionic-team/ionic-cli/issues"
   },
   "license": "MIT",
   "dependencies": {
