--- a/packages/cli-plugin-ionic1/package.json
+++ b/packages/cli-plugin-ionic1/package.json
@@ -45,8 +45,8 @@
   "dependencies": {
     "@ionic/cli-utils": "1.3.0",
     "chalk": "^1.1.3",
+    "chokidar": "^1.7.0",
     "express": "^4.15.2",
-    "glob-watcher": "^3.1.0",
     "opn": "^4.0.2",
     "proxy-middleware": "^0.15.0",
     "tiny-lr": "^1.0.3",
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@ionic/cli-scripts": "0.2.0",
     "@types/chalk": "^0.4.31",
+    "@types/chokidar": "^1.6.0",
     "@types/express": "^4.0.35",
     "@types/opn": "^3.0.28",
     "@types/xml2js": "0.0.33"
