--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@ionic/cli-scripts": "0.2.0",
     "@types/chalk": "^0.4.31",
+    "@types/inquirer": "0.0.34",
     "@types/minimist": "^1.2.0",
     "@types/opn": "^3.0.28",
     "@types/tar": "^1.0.29"
