refactor(hooks): add lifecycle hooks for watch and build

--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -52,6 +52,8 @@
     "dargs": "^5.1.0",
     "inquirer": "^3.0.6",
     "leek": "0.0.24",
+    "lodash": "^4.17.4",
+    "lodash.clonedeep": "^4.5.0",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "os-name": "^2.0.1",
@@ -67,7 +69,7 @@
     "@ionic/cli-scripts": "0.2.0",
     "@types/chalk": "^0.4.31",
     "@types/inquirer": "0.0.34",
-    "@types/lodash": "^4.14.58",
+    "@types/lodash": "^4.14.65",
     "@types/minimist": "^1.2.0",
     "@types/ncp": "^2.0.0",
     "@types/rimraf": "0.0.28",
