feat(gulp): ionic watch/build events for gulp integration
ionic:build:before, ionic:build:after, and ionic:watch:before are now
available as gulp tasks that hook into the CLI.

--- a/packages/cli-plugin-gulp/package.json
+++ b/packages/cli-plugin-gulp/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@ionic/cli-scripts": "0.2.0",
-    "@types/chalk": "^0.4.31"
+    "@types/chalk": "^0.4.31",
+    "@types/gulp": "^4.0.3"
   }
 }
