chore(gulp): use exactly @types/gulp@4.0.3
Latest 3.x.x types not working (Interface 'Gulp' incorrectly extends
interface 'Orchestrator'.) and 4.0.4 is actually for the 4.x branch.
4.0.3 appears to be for gulp 3 and works wonderfully. How joyful.

--- a/packages/cli-plugin-gulp/package.json
+++ b/packages/cli-plugin-gulp/package.json
@@ -49,6 +49,6 @@
   "devDependencies": {
     "@ionic/cli-scripts": "0.2.0",
     "@types/chalk": "^0.4.31",
-    "@types/gulp": "^4.0.3"
+    "@types/gulp": "4.0.3"
   }
 }
