--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "lerna run test",
     "build": "lerna run build",
     "watch": "lerna run watch --parallel",
-    "docs": "node ./scripts/docs.js",
+    "docs": "node ./packages/cli-scripts/docs.js",
     "publish:canary": "lerna publish --canary --exact --npm-tag canary",
     "publish:beta": "lerna publish --exact --npm-tag beta",
     "publish:ci": "npm run publish:canary -- --yes",
