--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@ionic/cli-utils": "1.4.0",
     "chalk": "^1.1.3",
+    "ci-info": "^1.0.0",
     "minimist": "^1.2.0",
     "opn": "^4.0.2",
     "semver": "^5.3.0",
