--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "archiver": "^1.3.0",
     "chalk": "^1.1.3",
+    "ci-info": "^1.0.0",
     "cross-spawn": "^4.0.2",
     "dargs": "^5.1.0",
     "inquirer": "^3.0.6",
@@ -55,7 +56,6 @@
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
-    "os-name": "^2.0.1",
     "rimraf": "^2.5.4",
     "semver": "^5.3.0",
     "slice-ansi": "0.0.4",
