--- a/packages/cli-utils/tsconfig.json
+++ b/packages/cli-utils/tsconfig.json
@@ -20,6 +20,7 @@
   },
   "include": [
     "../../types/archiver.d.ts",
+    "../../types/ci-info.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/dargs.d.ts",
     "../../types/slice-ansi.d.ts",
@@ -28,7 +29,6 @@
     "../../types/strip-ansi.d.ts",
     "../../types/strip-ansi.d.ts",
     "../../types/leek.d.ts",
-    "../../types/os-name.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
