--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -53,16 +53,15 @@
   "dependencies": {
     "@ionic/cli-utils": "1.4.0",
     "chalk": "^1.1.3",
-    "ci-info": "^1.0.0",
     "minimist": "^1.2.0",
     "opn": "^4.0.2",
+    "os-name": "^2.0.1",
     "semver": "^5.3.0",
     "tar": "^2.2.1"
   },
   "devDependencies": {
     "@ionic/cli-scripts": "0.2.0",
     "@types/chalk": "^0.4.31",
-    "@types/inquirer": "0.0.34",
     "@types/minimist": "^1.2.0",
     "@types/opn": "^3.0.28",
     "@types/tar": "^1.0.29"
