chore(docs): convert ansi styles and urls to md

--- a/packages/cli-scripts/package.json
+++ b/packages/cli-scripts/package.json
@@ -3,5 +3,9 @@
   "version": "0.2.0",
   "bin": {
     "cli-scripts-prepublish": "prepublish.js"
+  },
+  "dependencies": {
+    "ansi-styles": "^3.1.0",
+    "escape-string-regexp": "^1.0.5"
   }
 }
