--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -47,7 +47,7 @@
   ],
   "dependencies": {
     "archiver": "^1.3.0",
-    "chalk": "^1.1.3",
+    "chalk": "^2.0.0",
     "ci-info": "^1.0.0",
     "cross-spawn": "^4.0.2",
     "dargs": "^5.1.0",
@@ -58,8 +58,9 @@
     "ncp": "^2.0.0",
     "rimraf": "^2.5.4",
     "semver": "^5.3.0",
-    "slice-ansi": "0.0.4",
-    "string-width": "^2.0.0",
+    "slice-ansi": "^1.0.0",
+    "string-width": "^2.1.0",
+    "strip-ansi": "^4.0.0",
     "superagent": "^3.5.2",
     "uuid": "^3.0.1",
     "wrap-ansi": "^2.1.0"
@@ -75,9 +76,6 @@
     "@types/semver": "^5.3.31",
     "@types/uuid": "^2.0.29",
     "@types/wrap-ansi": "^2.0.14"
-  },
-  "peerDependencies": {
-    "strip-ansi": "^3.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
