--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -18,7 +18,7 @@
     "watch-js-chokidar": "chokidar --silent \"dist/**/*.js\" -c \"npm run build-js\"",
     "script-prepublish": "cli-scripts-prepublish cli-utils",
     "test": "jest",
-    "prepublish": "in-publish && npm run build || not-in-publish"
+    "prepublish": "npm run build"
   },
   "keywords": [
     "ionic",
