--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -49,13 +49,13 @@
     "@angular/compiler": "^4.2.4",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
-    "@ionic/app-scripts": "^1.3.8",
+    "@ionic/app-scripts": "^2.0.0",
     "@ionic/cli-scripts": "0.2.0",
     "@types/chalk": "^0.4.31",
     "@types/clean-css": "^3.4.30",
     "rxjs": "^5.4.1"
   },
   "peerDependencies": {
-    "@ionic/app-scripts": "^1.3.8"
+    "@ionic/app-scripts": "*"
   }
 }
