--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "husky": "^0.14.3",
     "jest": "^20.0.4",
     "jest-cli": "^20.0.4",
-    "lerna": "^2.0.0-rc.5",
+    "lerna": "^2.0.0",
     "replace": "^0.3.0",
     "ts-jest": "^20.0.4",
     "tslint": "^5.3.2",
