--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "lerna run build",
     "watch": "lerna run watch --parallel",
     "docs": "node ./packages/cli-scripts/docs.js",
-    "publish:canary": "lerna publish --canary --exact --npm-tag=canary",
+    "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
     "publish:pro": "lerna publish --canary=pro --exact --npm-tag=pro --skip-git",
     "publish:beta": "lerna publish --exact --npm-tag=beta",
     "publish:ci": "npm run publish:canary -- --yes",
