fix(ionic1): Fix refresh issue on devices
fixes https://github.com/ionic-team/ionic-cli/issues/2433

--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -66,7 +66,6 @@
   "devDependencies": {
     "@ionic/cli-scripts": "0.2.1",
     "@types/chalk": "^0.4.31",
-    "@types/xml2js": "0.0.33",
-    "xml2js": "^0.4.17"
+    "@types/xml2js": "0.0.33"
   }
 }
