feat: ionic pro

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "private": true,
   "scripts": {
-    "bootstrap": "lerna bootstrap && npm run build && npm run link",
-    "link": "lerna exec --scope \"@ionic/cli-*\" -- npm link",
-    "lint": "tslint -c tslint.json 'packages/*/src/**/*.ts' 'scripts/**/*.ts'",
+    "bootstrap": "lerna bootstrap && npm run build",
+    "clean": "lerna run clean",
+    "link": "lerna exec -- npm link",
+    "unlink": "lerna exec -- npm unlink",
+    "lint": "lerna run lint",
     "test": "lerna run test",
     "build": "lerna run build",
     "watch": "lerna run watch --parallel",
     "docs": "node ./packages/cli-scripts/docs.js",
     "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
-    "publish:pro": "lerna publish --canary=pro --exact --npm-tag=pro --skip-git",
     "publish:beta": "lerna publish --exact --npm-tag=beta",
     "publish:ci": "npm run publish:canary -- --yes",
     "publish": "lerna publish --exact --conventional-commits",
