--- a/packages/cli-plugin-gulp/package.json
+++ b/packages/cli-plugin-gulp/package.json
@@ -7,7 +7,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "lint": "tslint -c ../../tslint.json \"src/**/*.ts\"",
+    "lint": "tslint --config ../../tslint.json --project tsconfig.json --type-check",
     "build": "npm run clean && npm run build-ts && npm run build-js",
     "build-ts": "tsc",
     "build-js": "npm run script-prepublish",
@@ -44,7 +44,8 @@
   },
   "dependencies": {
     "@ionic/cli-utils": "1.5.0",
-    "chalk": "^2.0.0"
+    "chalk": "^2.0.0",
+    "tslib": "^1.7.1"
   },
   "devDependencies": {
     "@ionic/cli-scripts": "0.2.1",
