--- a/packages/cli-plugin-ionic-angular/tsconfig.json
+++ b/packages/cli-plugin-ionic-angular/tsconfig.json
@@ -5,9 +5,14 @@
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
     "module": "commonjs",
     "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
     "outDir": "./dist",
+    "pretty": true,
     "removeComments": true,
     "strict": true,
     "strictNullChecks": false,
