--- a/packages/ionic/tsconfig.json
+++ b/packages/ionic/tsconfig.json
@@ -4,9 +4,14 @@
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
     "module": "commonjs",
     "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
     "outDir": "./dist",
+    "pretty": true,
     "removeComments": true,
     "strict": true,
     "target": "es6",
@@ -21,6 +26,7 @@
     "../../types/slice-ansi.d.ts",
     "../../types/strip-ansi.d.ts",
     "../../types/string-width.d.ts",
+    "../../types/ssh-config.d.ts",
     "../../types/superagent.d.ts",
     "../../types/leek.d.ts",
     "../../types/os-name.d.ts",
