--- a/packages/cli-plugin-proxy/package.json
+++ b/packages/cli-plugin-proxy/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@ionic/cli-plugin-proxy",
   "version": "1.3.2",
-  "preferGlobal": true,
   "description": "Ionic CLI plugin for proxying all CLI HTTP requests",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
@@ -9,7 +8,7 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "lint": "tslint -c ../../tslint.json \"src/**/*.ts\"",
+    "lint": "tslint --config ../../tslint.json --project tsconfig.json --type-check",
     "build": "npm run clean && npm run build-ts && npm run build-js",
     "build-ts": "tsc",
     "build-js": "npm run script-prepublish",
@@ -58,7 +57,8 @@
   },
   "dependencies": {
     "@ionic/cli-utils": "1.5.0",
-    "superagent-proxy": "^1.0.2"
+    "superagent-proxy": "^1.0.2",
+    "tslib": "^1.7.1"
   },
   "devDependencies": {
     "@ionic/cli-scripts": "0.2.1"
