--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -4,18 +4,18 @@
   "description": "Ionic CLI Utils",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "scripts": {
-    "clean": "rm -rf ./dist",
-    "lint": "tslint -c ../../tslint.json \"src/**/*.ts\"",
+    "clean": "rm -rf index.* bootstrap.* definitions.* guards.* ./lib ./dist",
+    "lint": "tslint --config ../../tslint.json --project tsconfig.json --type-check",
     "build": "npm run clean && npm run build-ts && npm run build-js",
     "build-ts": "tsc",
     "build-js": "npm run script-prepublish",
     "watch": "concurrently -p \"{name} \" -n \"TS,JS\" -c \"cyan.bold,yellow.dim\" \"npm run watch-ts\" \"npm run watch-js\"",
     "watch-ts": "tsc -w",
     "watch-js": "cross-env-shell IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local \"npm run watch-js-chokidar\"",
-    "watch-js-chokidar": "chokidar --silent \"dist/**/*.js\" -c \"npm run build-js\"",
+    "watch-js-chokidar": "chokidar --silent \"**/*.js\" -c \"npm run build-js\"",
     "script-prepublish": "cli-scripts-prepublish cli-utils",
     "test": "jest",
     "prepublish": "npm run build"
@@ -42,9 +42,6 @@
     "url": "https://github.com/ionic-team/ionic-cli/issues"
   },
   "license": "MIT",
-  "files": [
-    "dist/"
-  ],
   "dependencies": {
     "archiver": "^1.3.0",
     "chalk": "^2.0.0",
@@ -56,12 +53,12 @@
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
-    "rimraf": "^2.5.4",
     "semver": "^5.3.0",
     "slice-ansi": "^1.0.0",
     "string-width": "^2.1.0",
     "strip-ansi": "^4.0.0",
     "superagent": "^3.5.2",
+    "tslib": "^1.7.1",
     "uuid": "^3.0.1",
     "wrap-ansi": "^2.1.0"
   },
@@ -72,7 +69,6 @@
     "@types/lodash": "^4.14.65",
     "@types/minimist": "^1.2.0",
     "@types/ncp": "^2.0.0",
-    "@types/rimraf": "0.0.28",
     "@types/semver": "^5.3.31",
     "@types/uuid": "^2.0.29",
     "@types/wrap-ansi": "^2.0.14"
