--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -14,7 +14,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "lint": "tslint --config ../../tslint.json --project tsconfig.json --type-check",
+    "lint": "tslint --config ../../tslint.js --project tsconfig.json --type-check",
     "build": "npm run clean && npm run build-ts && npm run build-js",
     "build-ts": "tsc",
     "build-js": "npm run script-prepublish",
