--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -48,6 +48,7 @@
     "ci-info": "^1.0.0",
     "cross-spawn": "^4.0.2",
     "dargs": "^5.1.0",
+    "dev-null": "^0.1.1",
     "inquirer": "^3.0.6",
     "leek": "0.0.24",
     "lodash": "^4.17.4",
