--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -43,35 +43,36 @@
   },
   "license": "MIT",
   "dependencies": {
-    "archiver": "^1.3.0",
+    "archiver": "^2.0.0",
     "chalk": "^2.0.0",
     "ci-info": "^1.0.0",
     "cross-spawn": "^4.0.2",
     "dargs": "^5.1.0",
     "dev-null": "^0.1.1",
-    "inquirer": "^3.0.6",
+    "inquirer": "^3.2.1",
     "leek": "0.0.24",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
-    "semver": "^5.3.0",
+    "semver": "^5.4.1",
     "slice-ansi": "^1.0.0",
-    "string-width": "^2.1.0",
+    "string-width": "^2.1.1",
     "strip-ansi": "^4.0.0",
     "superagent": "^3.5.2",
     "tslib": "^1.7.1",
     "uuid": "^3.0.1",
-    "wrap-ansi": "^2.1.0"
+    "wrap-ansi": "^3.0.1"
   },
   "devDependencies": {
     "@ionic/cli-scripts": "0.3.0",
+    "@types/archiver": "^2.0.0",
     "@types/chalk": "^0.4.31",
-    "@types/inquirer": "0.0.34",
-    "@types/lodash": "^4.14.65",
+    "@types/inquirer": "0.0.35",
+    "@types/lodash": "^4.14.71",
     "@types/minimist": "^1.2.0",
     "@types/ncp": "^2.0.0",
-    "@types/semver": "^5.3.31",
-    "@types/uuid": "^2.0.29",
+    "@types/semver": "^5.3.33",
+    "@types/uuid": "^3.4.0",
     "@types/wrap-ansi": "^2.0.14"
   },
   "jest": {
