--- a/packages/cli-plugin-cordova/tsconfig.json
+++ b/packages/cli-plugin-cordova/tsconfig.json
@@ -22,6 +22,7 @@
   "include": [
     "../../types/cross-spawn.d.ts",
     "../../types/dargs.d.ts",
+    "../../types/elementtree.d.ts",
     "../../types/string-width.d.ts",
     "../../types/slice-ansi.d.ts",
     "../../types/strip-ansi.d.ts",
