--- a/packages/@ionic/cli-utils/tsconfig.json
+++ b/packages/@ionic/cli-utils/tsconfig.json
@@ -38,6 +38,7 @@
     "../../../types/strip-ansi.d.ts",
     "../../../types/superagent.d.ts",
     "../../../types/tiny-lr.d.ts",
+    "../../../types/wrap-ansi.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
