--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "ts-jest": "^20.0.10",
     "tslint": "^5.6.0",
     "tslint-ionic-rules": "^0.0.11",
-    "typescript": "^2.5.0-dev.20170807"
+    "typescript": "^2.5.2"
   }
 }
