refactor(daemon): comm server

--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -37,9 +37,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/gulp": "^3.8.33",
     "archiver": "^2.0.0",
     "basic-auth": "^1.1.0",
+    "body-parser": "^1.17.2",
     "chalk": "^2.0.0",
     "chokidar": "^1.7.0",
     "ci-info": "^1.0.0",
@@ -75,11 +75,13 @@
     "@ionic/cli-scripts": "0.3.3",
     "@types/archiver": "^2.0.0",
     "@types/basic-auth": "^1.1.2",
+    "@types/body-parser": "^1.16.5",
     "@types/chalk": "^0.4.31",
     "@types/chokidar": "^1.7.1",
     "@types/clean-css": "^3.4.30",
     "@types/diff": "^3.2.0",
     "@types/express": "^4.0.36",
+    "@types/gulp": "^3.8.33",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.71",
     "@types/minimist": "^1.2.0",
