test: fix for new ts-jest

--- a/packages/@ionic/cli-plugin-proxy/package.json
+++ b/packages/@ionic/cli-plugin-proxy/package.json
@@ -40,6 +40,11 @@
   ],
   "license": "MIT",
   "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
     "moduleFileExtensions": [
       "ts",
       "js"
