refactor(framework): cli framework
This is the start of `@ionic/cli-framework`, a reusable framework for
creating CLIs.

--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -52,14 +52,12 @@
     "leek": "0.0.24",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
-    "ncp": "^2.0.0",
     "opn": "^5.1.0",
     "proxy-middleware": "^0.15.0",
     "semver": "^5.4.1",
     "slice-ansi": "^1.0.0",
     "ssh-config": "^1.1.1",
     "string-width": "^2.1.1",
-    "strip-ansi": "^4.0.0",
     "superagent": "^3.6.3",
     "tar": "^2.2.1",
     "tiny-lr": "^1.0.5",
@@ -72,6 +70,7 @@
     "@angular/compiler": "^4.4.4",
     "@angular/compiler-cli": "^4.4.4",
     "@angular/core": "^4.4.4",
+    "@ionic/cli-framework": "0.0.1",
     "@ionic/cli-scripts": "0.3.5",
     "@types/archiver": "^2.0.1",
     "@types/basic-auth": "^1.1.2",
@@ -84,7 +83,6 @@
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.77",
     "@types/minimist": "^1.2.0",
-    "@types/ncp": "^2.0.1",
     "@types/opn": "^3.0.28",
     "@types/semver": "^5.4.0",
     "@types/tar": "^1.0.29",
